# XCSoar

./: .gitignore  CMake2Meson.cmd  CMakeLists.txt  CMakeSource.cmake  GetText.md  NEWS.txt  Rework.cmake  TaskList MSVC.md  meson.build  meson_from_cmake.build  meson_options.txt
Data/: CMakeLists.txt  CMakeSource.cmake  XCSoar.rc.in  meson.build
Data/Input/: default.xci
po/: CMakeLists.txt  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  meson.build  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  te.po  tr.po  uk.po  vi.po  xcsoar.pot  zh_CN.po  zh_Hant.po
src/: CMakeLists.txt  MapSettings.cpp  MapSettings.hpp  MergeThread.cpp  MergeThread.hpp  Message.cpp  Message.hpp  PageActions.cpp  PageSettings.cpp  PageSettings.hpp  PopupMessage.cpp  PopupMessage.hpp  ResourceLoader.cpp  Resources.hpp  Startup.cpp  UIActions.cpp  UIActions.hpp  Version.cpp  meson.build
src/Airspace/: CMakeLists.txt  CMakeSource.cmake  meson.build
src/Atmosphere/: CMakeLists.txt  meson.build
src/Blackboard/: CMakeLists.txt
src/Cloud/: CMakeLists.txt  CMakeSource.cmake  meson.build
src/Computer/: CMakeLists.txt  Settings.hpp  meson.build
src/CrossSection/: CMakeLists.txt
src/Device/: CMakeLists.txt  Config.cpp  Config.hpp  Descriptor.cpp  Driver.cpp  Driver.hpp  meson.build
src/Device/Driver/FLARM/: BinaryProtocol.cpp  Device.cpp  Device.hpp  Logger.cpp  Mode.cpp  Register.cpp
src/Device/Port/: ConfiguredPort.cpp
src/Dialogs/: CMakeLists.txt  CMakeSource.cmake  DataField.cpp  DownloadFilePicker.cpp  Error.cpp  ProfilePasswordDialog.cpp  StartupDialog.cpp  meson.build
src/Dialogs/Contest/WeGlide/: FlightDeleteDialog.cpp  FlightDeleteDialog.hpp  FlightPatchDialog.cpp  FlightPatchDialog.hpp  FlightUploadDialog.cpp  FlightUploadDialog.hpp  FlightUploadResponse.cpp  FlightUploadResponse.hpp  TaskDownloadDialog.cpp  TaskDownloadDialog.hpp  UserSelection.cpp  UserSelection.hpp
src/Dialogs/Device/: DeviceEditWidget.cpp  DeviceEditWidget.hpp  DeviceListDialog.cpp  ManageFlarmDialog.cpp  ManageFlarmDialog.hpp
src/Dialogs/Device/BlueFly/: BlueFlyConfigurationDialog.cpp
src/Dialogs/Device/FLARM/: ConfigWidget.cpp  ConfigWidget.hpp
src/Dialogs/Net/: WifiDialog.cpp
src/Dialogs/Settings/Panels/: PagesConfigPanel.cpp  SymbolsConfigPanel.cpp  WeGlideConfigPanel.cpp
src/Dialogs/Task/Manager/: TaskActionsPanel.cpp  TaskActionsPanel.hpp
src/Dialogs/Traffic/: TrafficList.cpp
src/Dialogs/Weather/: PCMetDialog.cpp  PCMetDialog.hpp
src/Engine/: CMakeLists.txt  meson.build
src/Engine/Task/Unordered/: AlternateTask.hpp
src/FLARM/: CMakeLists.txt  DeviceInformation.hpp  Error.cpp  Version.hpp  meson.build
src/Form/: CMakeLists.txt  Form.hpp  GridView.hpp  meson.build
src/Gauge/: CMakeLists.txt
src/Geo/: CMakeLists.txt  meson.build
src/Hardware/: CMakeSource.cmake  DisplayDPI.cpp
src/IGC/: CMakeLists.txt  meson.build
src/InfoBoxes/: CMakeLists.txt  meson.build
src/Input/: CMakeLists.txt  InputConfig.hpp  InputEvents.cpp  InputEvents.hpp  InputEventsActions.cpp  InputEventsDevice.cpp  InputEventsMap.cpp  InputKeys.cpp  meson.build
src/Job/: CMakeLists.txt  meson.build
src/Language/: CMakeLists.txt  meson.build
src/Logger/: CMakeLists.txt  ExternalLogger.cpp  meson.build
src/Look/: Look.hpp  WeatherLook.cpp  WeatherLook.hpp
src/MapWindow/: CMakeLists.txt  MapWindow.hpp  MapWindowRender.cpp  MapWindowTraffic.cpp  meson.build
src/Markers/: CMakeLists.txt  meson.build
src/Math/: CMakeLists.txt  meson.build
src/Menu/: CMakeLists.txt  MenuBar.hpp  MenuData.hpp  meson.build
src/Profile/: ComputerProfile.cpp  Keys.hpp  MapProfile.cpp  ProfileKeys.cpp  ProfileKeys.hpp
src/Renderer/: CMakeLists.txt  CMakeSource.cmake  LabelShape.hpp  TextInBox.cpp  TextInBox.hpp  WaypointIconRenderer.cpp  WaypointLabelList.cpp  WeatherRenderer.cpp  WeatherRenderer.hpp  meson.build
src/Replay/: CMakeLists.txt
src/Screen/: CMakeLists.txt  meson.build
src/Terrain/: CMakeLists.txt  meson.build
src/Terrain/jasper/: CMakeLists.txt  meson.build
src/Topography/: CMakeLists.txt  meson.build
src/Tracking/: CMakeLists.txt  meson.build
src/Tracking/SkyLines/: Client.cpp
src/Waypoint/: meson.build
src/Weather/PCMet/: Images.cpp  Images.hpp  Overlays.cpp
src/Widget/: CMakeLists.txt  CMakeSource.cmake  RowFormWidget.cpp  RowFormWidget.hpp  WeatherWidget.cpp  WeatherWidget.hpp  meson.build
src/XML/: CMakeLists.txt
src/co/: CMakeLists.txt  meson.build
src/event/: CMakeLists.txt  Call.cxx  meson.build
src/io/: CMakeLists.txt  FileDescriptor.hxx  meson.build
src/json/: CMakeLists.txt  ParserOutputStream.cxx  ParserOutputStream.hxx  meson.build  meson_from_cmake.build
src/lib/curl/: Easy.hxx
src/lua/: CMakeLists.txt  CMakeSource.cmake  Cloud.cpp  Cloud.hpp  Full.cpp  InputEvent.cpp  meson.build
src/net/: CMakeLists.txt  CMakeSource.cmake  IPv4Address.hxx  IPv6Address.hxx  meson.build
src/net/client/WeGlide/: CMakeLists.txt  CMakeSource.cmake  DeleteFlight.cpp  DeleteFlight.hpp  DeleteIGCFile.cpp  DeleteIGCFile.hpp  DownloadTask.cpp  DownloadTask.hpp  GetJsonString.cpp  GetObjectInfo.cpp  GetObjectInfo.hpp  PatchFlight.cpp  PatchFlight.hpp  PatchIGCFile.cpp  PatchIGCFile.hpp  Settings.hpp  UploadFlight.cpp  UploadIGCFile.cpp  UploadIGCFile.hpp  WeGlideObjects.hpp  WeGlideTaskDialog.cpp
src/net/client/tim/: Glue.cpp
src/net/wifi/: WPASupplicant.cpp
src/system/: CMakeLists.txt  FileUtil.cpp  FileUtil.hpp  SystemLoad.cpp  meson.build
src/thread/: CMakeLists.txt
src/ui/: CMakeLists.txt  meson.build
src/ui/canvas/custom/: Cache.cpp
src/ui/canvas/opengl/: Canvas.cpp
src/ui/control/: List.cpp
src/ui/opengl/: System.hpp
src/ui/window/: ContainerWindow.cpp  TopWindow.hpp
src/util/: AllocatedGrid.hxx  CMakeLists.txt  ConvertString.hpp  WStringAPI.hxx
src/util/msvc/: Compiler.h
src/zzip/: CMakeLists.txt  _msvc.h  meson.build
test/src/: CMakeLists.txt  CMakeSource.cmake  RunWeGlideUploadFlight.cpp  meson.build
tools/: CMakeLists.txt  meson.build
(+11 files in other folders)
